test cdn s3 bucket

--- a/_posts/2025-09-04-Devlog02.md
+++ b/_posts/2025-09-04-Devlog02.md
@@ -4,7 +4,30 @@ title:  "Harvested Devlog 02"
 ---
 
 
-## Introduction
+# Harvested Devlog 02
 
-In this post, we’ll explore the inner workings of process hollowing on 64‑bit Windows, complete with a hands‑on C++ example. Many resources focus on 32‑bit or gloss over the 64‑bit pitfalls—this guide will address those gaps and help you avoid the common traps that can drive you crazy.
+New map, fps mechanic improvements and more...
 
+## About the Roadmap
+
+It's been while from the first devlog video. I showed an roadmap image in that video, and I failed it! The main reason was the Istanbul earthquake just happened after the first devlog video released. I left the city for a while. Then I got an internship opportunity at a good cyber security company while all that happens. It took some time for me to settle things down and again start developing.
+
+This also teached me that very planned roadmap not suitable for me. I'm 24, my surrouindings are full with oppurtunities and I need a flex workplan. What I want is being more transparent with the development and rapid prototypes with the community.
+
+To join upcoming play tests and shape the project you can check our [Discord](https://discord.gg/PwynBxqNyy) community.
+
+## New Map: Istanbul
+
+	
+
+{% include embed/video.html src='/videos/ragdoll-improvement-before-after.mp4' %}
+
+
+
+
+
+
+
+## Weapon Sway
+
+## Better Bone Collision
