change video settings

--- a/_posts/2025-09-04-Devlog02.md
+++ b/_posts/2025-09-04-Devlog02.md
@@ -20,8 +20,6 @@ To join upcoming play tests and shape the project you can check our [Discord](ht
 
 	
 
-{% include embed/video.html src='/videos/ragdoll-improvement-before-after.mp4' %}
-
 
 
 
@@ -29,5 +27,17 @@ To join upcoming play tests and shape the project you can check our [Discord](ht
 
 
 ## Weapon Sway
+
+## Ragdoll Improvement
+
+{%
+  include embed/video.html
+  src='/videos/ragdoll-improvement-before-after.mp4'
+  title='left is before and right is new'
+  autoplay=true
+  loop=true
+  muted=true
+  width=640
+%}
 
 ## Better Bone Collision
