wrap video with html syntax

--- a/_posts/2025-09-04-Devlog02.md
+++ b/_posts/2025-09-04-Devlog02.md
@@ -30,6 +30,7 @@ To join upcoming play tests and shape the project you can check our [Discord](ht
 
 ## Ragdoll Improvement
 
+<div style="max-width:600px; margin:auto;">
 {%
   include embed/video.html
   src='/videos/ragdoll-improvement-before-after.mp4'
@@ -39,5 +40,6 @@ To join upcoming play tests and shape the project you can check our [Discord](ht
   muted=true
   width=640
 %}
+</div>
 
 ## Better Bone Collision
