--- a/_posts/2025-09-04-Devlog02.md
+++ b/_posts/2025-09-04-Devlog02.md
@@ -30,7 +30,7 @@ To join upcoming play tests and shape the project you can check our [Discord](ht
 
 ## Ragdoll Improvement
 
-<div class="resopnsive-video">
+<div class="video-320">
 {%
   include embed/video.html
   src='/videos/ragdoll-improvement-before-after.mp4'
