fix title of devlog02

--- a/_posts/2025-09-04-Devlog02.md
+++ b/_posts/2025-09-04-Devlog02.md
@@ -1,12 +1,8 @@
 ---
 layout: post
 title:  "Harvested Devlog 02"
+description: New map, fps mechanics and more...
 ---
-
-
-# Harvested Devlog 02
-
-New map, fps mechanic improvements and more...
 
 ## About the Roadmap
 
@@ -30,11 +26,13 @@ To join upcoming play tests and shape the project you can check our [Discord](ht
 
 ## Ragdoll Improvement
 
-<div class="video-640 video-nopause">
+Player body collisions remade in a way suits better for a cubic character. When players dies they do not glitch and bounce around anymore. Also bullets apply force correctly based on their velocity.
+
+<div class="video-480 video-nopause">
 {%
   include embed/video.html
   src='/videos/ragdoll-improvement-before-after.mp4'
-  title='left is before and right is new'
+  title='left:before and right:after'
   autoplay=true
   loop=true
   muted=true
