--- a/_posts/2025-09-04-Devlog02.md
+++ b/_posts/2025-09-04-Devlog02.md
@@ -24,7 +24,7 @@ To join upcoming play tests and shape the project you can check our [Discord](ht
 
 ## Weapon Sway
 
-## Ragdoll Improvement
+## Ragdoll Improvements
 
 Player body collisions remade in a way suits better for a cubic character. When players dies they do not glitch and bounce around anymore. Also bullets apply force correctly based on their velocity.
 
@@ -40,4 +40,18 @@ Player body collisions remade in a way suits better for a cubic character. When 
 %}
 </div>
 
-## Better Bone Collision
+## More Precise Bone Collision
+
+Damage hitbox for the players replaced from capsule collider to bone collisions which means now it's possible to shot bullets through the between player's legs. This update also will let us add headshots or damaging limbs in the future.
+
+<div class="video-480 video-nopause">
+{%
+  include embed/video.html
+  src='/videos/shooting-through-player-legs.mp4'
+  title='left:before and right:after'
+  autoplay=true
+  loop=true
+  muted=true
+  width=640
+%}
+</div>
