add image to post

--- a/_posts/2025-09-04-Devlog02.md
+++ b/_posts/2025-09-04-Devlog02.md
@@ -10,10 +10,18 @@ It's been while from the first devlog video. I showed an roadmap image in that v
 
 This also teached me that very planned roadmap not suitable for me. I'm 24, my surrouindings are full with oppurtunities and I need a flex workplan. What I want is being more transparent with the development and rapid prototypes with the community.
 
-To join upcoming play tests and shape the project you can check our [Discord](https://discord.gg/PwynBxqNyy) community.
 
-## New Map: Istanbul
 
+## First Ever Map: Istanbul
+
+The big reveal… The very first map of Harvested will be set in Istanbul!
+I already touched on landmarks and handcrafted maps in the first devlog video, and now the plan is to create a small section of Istanbul as the starting demo. Think of it as a playground—somewhere players can test mechanics, get a feel for the city’s atmosphere, and help us refine the art style.
+
+Right now, all the buildings are still gray boxes. The upcoming playtests will focus on how the gameplay feels inside this rough version of the map. Based on your feedback, these gray blocks will gradually evolve into detailed environments.
+
+The map is already massive. It’s built on a 4096x4096 resolution, and it takes me a full 15 minutes to walk from one edge to the other (yes, I tested it). Considering that for a while game won't have vehicles, for sure map size will be reduced to 2048x2048 or even 1024x1024.
+
+![istanbul-map](/images/istanbul-map-09-05-2025.png){: width="480"}
 	
 
 
