--- a/_posts/2025-09-04-Devlog02.md
+++ b/_posts/2025-09-04-Devlog02.md
@@ -20,6 +20,7 @@ Right now, all the buildings are still gray boxes. The upcoming playtests will f
 
 The map is already massive. It’s built on a 4096x4096 resolution, and it takes me a full 15 minutes to walk from one edge to the other (yes, I tested it). Considering that for a while game won't have vehicles, for sure map size will be reduced to 2048x2048 or even 1024x1024.
 
+![](/images/istanbul-map-09-05-2025.png){: width="480"}
 	
 
 ## Ragdoll Improvements
