--- a/_posts/2025-09-04-Devlog02.md
+++ b/_posts/2025-09-04-Devlog02.md
@@ -21,8 +21,8 @@ Right now, all the buildings are still gray boxes. The upcoming playtests will f
 The map is already massive. It’s built on a 4096x4096 resolution, and it takes me a full 15 minutes to walk from one edge to the other (yes, I tested it). Considering that for a while game won't have vehicles, for sure map size will be reduced to 2048x2048 or even 1024x1024.
 
 ![](/images/istanbul-map-09-05-2025.png){: width="480"}
+_map: 4096x4096_
 	
-
 ## Ragdoll Improvements
 
 Player body collisions remade in a way suits better for a cubic character. When players dies they do not glitch and bounce around anymore. Also bullets apply force correctly based on their velocity.
@@ -35,7 +35,6 @@ Player body collisions remade in a way suits better for a cubic character. When 
   autoplay=true
   loop=true
   muted=true
-  width=640
 %}
 </div>
 
@@ -47,12 +46,25 @@ Damage hitbox for the players replaced from capsule collider to bone collisions 
 {%
   include embed/video.html
   src='/videos/shooting-through-player-legs.mp4'
-  title='left:before and right:after'
+  title='bullets do not give damage to the player'
   autoplay=true
   loop=true
   muted=true
-  width=640
 %}
 </div>
 
 ## Weapon Sway
+
+Here is my favourite update, the weapon sway. Especially with the recoil smoothness holding and firing a weapon feels much more sastifying. Both player movement and camera rotation cause weapon sway effects.
+
+<div class="video-480 video-nopause">
+{%
+  include embed/video.html
+  src='/videos/weapon-sway-effect-09-05-2025.mp4'
+  title='bullets do not give damage to the player'
+  autoplay=true
+  loop=true
+  muted=true
+%}
+</div>
+
