--- a/_posts/2025-09-04-Devlog02.md
+++ b/_posts/2025-09-04-Devlog02.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Harvested Devlog 02"
+title:  "Tarnish Devlog 02"
 description: New map, fps mechanics and more...
 ---
 
@@ -13,7 +13,7 @@ This also teached me that very planned roadmap not suitable for me. I'm 24, my s
 
 ## First Ever Map: Istanbul
 
-The big reveal… The very first map of Harvested will be set in Istanbul!
+The big reveal… The very first map of Tarnish will be set in Istanbul!
 I already touched on landmarks and handcrafted maps in the first devlog video, and now the plan is to create a small section of Istanbul as the starting demo. Think of it as a playground—somewhere players can test mechanics, get a feel for the city’s atmosphere, and help us refine the art style.
 
 Right now, all the buildings are still gray boxes. The upcoming playtests will focus on how the gameplay feels inside this rough version of the map. Based on your feedback, these gray blocks will gradually evolve into detailed environments.
